# SLoop

./: CLAUDE.md  DESIGN.md  README.md  SYSTEM.md  pyproject.toml
src/sloop/: __init__.py  cli.py  config.py  models.py  orchestrator.py  prompts.py  store.py  usage.py  verify.py  worktree.py
src/sloop/agents/: base.py  fake.py  parsing.py  render.py
src/sloop/templates/: build.md  config.toml  idea.md  review.md
