[project]
name = "sloop"
version = "0.1.0"
description = "Autonomous multi-agent build loop: give it a goal, activate, it grinds until the usage limit forces a clean stop."
requires-python = ">=3.10"
dependencies = [
    "claude-agent-sdk>=0.1.0",
]

[project.scripts]
sloop = "sloop.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/sloop"]
